--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+public/js
+public/mix-manifest.json
+.DS_Store
+app/.DS_Store
+app/Http/.DS_Store
+
