集成支付宝

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,19 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#支付配置
+ALIPAY_APP_ID=
+ALIPAY_APP_SECRECT_CERT=
+ALIPAY_RETURN_URL=
+ALIPAY_NOTIFY_URL=
+ALIPAY_SERVICE_PROVIDER_ID=
+
+PAY_HTTP_TIMEOUT=
+PAY_HTTP_CONNECT_TIMEOUT=
+
+PAY_LOGGER_ENABLE=
+PAY_LOGGER_FILE=
+PAY_LOGGER_LEVEL=
+PAY_LOGGER_TYPE=
+PAY_LOGGER_MAX_FILE=
