--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "symfony/psr-http-message-bridge": "^2.1",
         "yansongda/pay": "^3.1"
     },
     "require-dev": {
