--- a/.env.example
+++ b/.env.example
@@ -24,8 +24,9 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_CLIENT=
+REDIS_HOST=
+REDIS_PASSWORD=
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
@@ -54,8 +55,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 #支付配置
 ALIPAY_APP_ID=
 ALIPAY_APP_SECRECT_CERT=
-ALIPAY_RETURN_URL=
-ALIPAY_NOTIFY_URL=
+ALIPAY_RETURN_URL="${APP_URL}/payment/alipay/return"
+ALIPAY_NOTIFY_URL="${APP_URL}/payment/alipay/notify"
 ALIPAY_SERVICE_PROVIDER_ID=
 
 PAY_HTTP_TIMEOUT=
